2001-07-24  Ulrich Drepper  <drepper@redhat.com>

	* iconv/gconv_cache.c (__gconv_lookup_cache): Catch one more
	boundary case and reject it.

2001-07-24  Andreas Jaeger  <aj@suse.de>

	* manual/examples/longopt.c (main): Fix which options take arguments.

2001-07-24  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/Makefile: Add dependencies for tst-loading test.

2001-07-24  Andreas Jaeger  <aj@suse.de>

	* iconv/iconvconfig.c (name_insert): Make static to avoid warning.

2001-07-23  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/locale.c (write_locales): Disable implicit
	locking for the stream.  Use feof_unlocked instead of feof.

	* sysdeps/unix/sysv/linux/i386/makecontext.S: Initialize %fs, %gs,
	and floating-point status as well.

	* libio/iofclose.c (_IO_new_fclose): Unlink descriptor first to
	avoid deadlock.
	* libio/oldiofclose.c (_IO_old_fclose): Likewise.
	* libio/genops.c (_IO_un_link): Get stream lock since it's not
	always done in the caller.
	(_IO_link_in): Likewise.

	* libio/genops.c (_IO_list_all_stamp): New variable.
	(_IO_un_link): Bump _IO_list_all_stamp after removing from list.
	(_IO_link): Likewise for insertion.
	(flush_cleanup): New function.
	(_IO_flush_all): Get list_all_lock and all individual locks for the
	streams.  Detect and handle changes to the _IO_list_all list.
	(_IO_flush_all_linebuffered): Likewise.
	* sysdeps/generic/bits/stdio-lock.h: Define
	_IO_cleanup_region_start_noarg.
	* sysdeps/mach/hurd/bits/stdio-lock.c: Likewise.

	* stdio-common/printf.h: Fix typo in comment.

	* iconv/gconv_cache.c (__gconv_lookup_cache): Handle encoding from
	and to INTERNAL.
	* iconv/iconvconfig.c: Create a special record for the INTERNAL
	encoding name in the output file.

2001-07-23  Jakub Jelinek  <jakub@redhat.com>

	* sunrpc/svc_tcp.c (svctcp_rendezvous_abort): New function.
	(svctcp_rendezvous_op): Use it.
	* sunrpc/svc_unix.c (svcunix_rendezvous_abort): New function.
	(svcunix_rendezvous_op): Use it.
